--- a/app/src/theme-production.scss
+++ b/app/src/theme-production.scss
@@ -64,15 +64,15 @@ code {
 
 /* Buttons */
 
-.p-button {
-  color: var(--nl-btn-color);
-  background: var(--nl-btn-bg-color);
-  border: 1px solid var(--nl-btn-border-color);
-}
+// .p-button {
+//   color: var(--nl-btn-color);
+//   background: var(--nl-btn-bg-color);
+//   border: 1px solid var(--nl-btn-border-color);
+// }
 
-.p-button:not(:disabled):hover {
-  color: var(--nl-btn-hover-color);
-  background: var(--nl-btn-hover-bg-color);
-  border-color: var(--nl-btn-hover-bg-color);
-}
+// .p-button:not(:disabled):hover {
+//   color: var(--nl-btn-hover-color);
+//   background: var(--nl-btn-hover-bg-color);
+//   border-color: var(--nl-btn-hover-bg-color);
+// }
 
