--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -62,6 +62,18 @@
 }
 
 /*
+ * APP TOASTER
+ */
+
+.app-toaster {
+  max-width: 90%;
+}
+.app-toaster {
+  font-size: 16px;
+}
+
+
+/*
  * APP CONTAINER
  */
 
@@ -199,33 +211,41 @@
   font-size: var(--nl-label-font-size);
 }
 
-.parameters .p-inputgroup input {
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
-}
-
-/* FileUpload */
+/* Multiple File (Folder) Upload */
 
 // buttons
-.parameters .p-fileupload .p-fileupload-buttonbar {
+.parameters .multiple-file-dataset .p-fileupload .p-fileupload-buttonbar {
   padding: 0.5rem;
   gap: 0.2rem;
 }
-.parameters .p-button.p-button-icon-only.p-button-rounded {
+.parameters .multiple-file-dataset .p-button.p-button-icon-only.p-button-rounded {
   border-radius: 50%;
   height: 2rem;
   width: 2rem;
 }
 // tooltip
-.parameters .custom-upload-btn-tooltip .p-tooltip-text {
+.parameters .multiple-file-dataset .custom-upload-btn-tooltip .p-tooltip-text {
   font-size: 10px;
 }
 // fileupload panel
-.parameters .p-fileupload .p-fileupload-content {
+.parameters .multiple-file-dataset .p-fileupload .p-fileupload-content {
   padding: 0.5rem;
   max-height: 200px;
   overflow-y: auto;
 }
-.parameters .p-fileupload .p-fileupload-row > div {
+.parameters .multiple-file-dataset .p-fileupload .p-fileupload-row > div {
   padding: 0.5rem;
 }
+
+/* Single File Upload */
+// .parameters .single-file-dataset input {
+//   border-top-right-radius: 0px;
+//   border-bottom-right-radius: 0px;
+// }
+
+// .parameters .single-file-dataset .p-button {
+//   border-radius: 0;
+//   margin: 0;
+// }
+
+/* String dataset */
