new update for authentication

--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -305,7 +305,7 @@
   display: inline-flex;
 }
 
-.parameters label {
+.parameters label, .parameters label * {
   font-size: var(--nl-label-font-size);
 }
 
