--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -192,20 +192,24 @@
 /* general styles */
 
 .table-pipelines,
-.table-workflows {
+.table-workflows,
+.table-datasets {
   margin: 20px 20px;
   min-width: 900px;
 }
 
 .table-pipelines *,
-.table-workflows * {
+.table-workflows *,
+.table-datasets * {
   font-size: var(--nl-font-size);
 }
 
 .table-pipelines .p-button,
 .table-workflows .p-button, 
-.table-workflows  .p-inline-message {
-  padding: 6px;
+.table-workflows  .p-inline-message,
+.table-datasets .p-button, 
+.table-datasets  .p-inline-message {
+    padding: 6px;
 }
 
 /* table-pipelines */
@@ -215,36 +219,61 @@
 }
 
 /* table-workflows: search filter */
+/* table-datasets: search filter */
+
 
 // search filter
-.table-workflows .p-inputtext {
+.table-workflows .p-inputtext,
+.table-datasets  .p-inputtext {
   height: 10px;
 }
 
 // header
-.table-workflows .p-datatable-header {
+.table-workflows .p-datatable-header,
+.table-datasets  .p-datatable-header {
   padding: 0.5rem;
 }
+.table-workflows .p-sortable-column .p-sortable-column-icon,
+.table-datasets .p-sortable-column .p-sortable-column-icon {
+  width: 10px;
+  height: 10px;
+}
 
-// splitbutton
-.table-workflows .p-splitbutton-menubutton {
+// header: action buttons
+.table-datasets .p-datatable-header .p-button {
+  width: 30px;
+  height: 30px;
+  margin-right: 5px;
+}
+
+
+// splitbutton/button
+.table-workflows .p-splitbutton-menubutton,
+.table-datasets  .p-splitbutton-menubutton {
   padding: 3px;
   width: 25px;
 }
+.table-datasets .p-button .p-button-icon-left {
+  margin-right: 1px;
+}
 
 // paginator
-.table-workflows .p-paginator * {
+.table-workflows .p-paginator *,
+.table-datasets  .p-paginator * {
   height: 30px;
   line-height: 25px;
 }
-.table-workflows .p-paginator .p-dropdown-label {
+.table-workflows .p-paginator .p-dropdown-label,
+.table-datasets .p-paginator .p-dropdown-label {
   padding: 2px;
 }
-.table-workflows .p-paginator .p-dropdown-trigger {
+.table-workflows .p-paginator .p-dropdown-trigger,
+.table-datasets .p-paginator .p-dropdown-trigger {
   height: 30px;
   width: 30px;
 }
-.table-workflows .p-paginator .p-dropdown-trigger .p-icon {
+.table-workflows .p-paginator .p-dropdown-trigger .p-icon,
+.table-datasets .p-paginator .p-dropdown-trigger .p-icon {
   height: 10px;
   width: 10px;
 }
@@ -361,9 +390,87 @@
 
 
 /*
- * WORKFLOW SECTION
+ * REPORT: DATASET
  */
 
+.report-dataset {
+  padding: 20px;
+}
+
+// panel
+.report-dataset .p-panel {
+  margin-bottom: 10px;
+}
+.report-dataset .p-panel-header {
+  font-size: var(--nl-font-size);
+}
+// metadata
+.report-dataset .dataset-name *,
+.report-dataset .dataset-description * {
+  font-size: var(--nl-font-size);
+}
+// File viewer
+.report-dataset td {
+  padding: 0;
+}
+.report-dataset .action-button .p-button {
+  width: 3rem;
+  height: 1rem;
+}
+.report-dataset .short-column {
+  width: 110px;
+  text-align: center;
+}
+.report-dataset .file-viewer * {
+  font-size: var(--nl-font-size);
+}
+.report-dataset .file-viewer .p-sortable-column .p-sortable-column-icon {
+  width: 10px;
+  height: 10px;
+}
+.report-dataset .p-treetable-header {
+  padding: 0.5rem 1rem;
+}
+.report-dataset .p-treetable-header .p-button {
+  width: 30px;
+  height: 30px;
+  margin-right: 5px;
+}
+
+.report-dataset .p-treetable-scrollable-body {
+  height: 300px;
+  max-height: 300px;
+}
+
+// // paginator
+// .report-dataset  .p-paginator * {
+//   height: 30px;
+//   line-height: 25px;
+// }
+// .report-dataset .p-paginator .p-dropdown-label {
+//   padding: 2px;
+// }
+// .report-dataset .p-paginator .p-dropdown-trigger {
+//   height: 30px;
+//   width: 30px;
+// }
+// .report-dataset .p-paginator .p-dropdown-trigger .p-icon {
+//   height: 10px;
+//   width: 10px;
+// }
+// .report-dataset .p-dropdown-panel .p-dropdown-item {
+//   font-size: var(--nl-font-size);
+// }
+
+
+
+/*
+ * REPORT: WORKFLOW
+ */
+
+
+
+// DEPRECATED???
 
 /* Workflow card */
 
@@ -380,6 +487,7 @@
 .card-workflow .status * {
   font-size: var(--nl-font-size);
 }
+
 
 /* Workflow panel */
 
@@ -492,6 +600,7 @@
 .panel-workflow .file-viewer * {
   font-size: var(--nl-font-size);
 }
+
 
 /* Log viewer */
 
